# 202611

./: .gitattributes  .gitignore  README.md  pyproject.toml
configs/: field_mapping_official_template.yaml
docs/: data_contract.md  official_data_ingestion_playbook.md
src/cp202611/: __init__.py  acceptance.py  benchmark.py  cli.py  dataio.py  evidence.py  pareto.py  planning.py  robustness.py  schema.py  stress.py  synthetic.py  typical_days.py  validation.py  visualization.py
src/cp202611/adapters/: __init__.py  official.py
src/cp202611/analysis/: diagnostics.py  evaluation.py
src/cp202611/optimization/: __init__.py  mvp_model.py
tests/: conftest.py  test_acceptance.py  test_dataio_and_typical_days.py  test_evaluation_and_pareto.py  test_evidence.py  test_mvp_model.py  test_official_adapter.py  test_robustness.py  test_season_benchmark.py  test_two_stage_planning.py  test_validation_and_stress.py  test_visualization.py
